--- a/public/slides/22-multinom-logistic-pt2.Rmd
+++ b/public/slides/22-multinom-logistic-pt2.Rmd
@@ -1,103 +1,76 @@
 ---
 title: "Multinomial Logistic Regression"
-subtitle: "Assumptions & Model Selection"
+subtitle: "Prediction + model selection + conditions"
 author: "Prof. Maria Tackett"
-date: "04.08.20"
 output:
   xaringan::moon_reader:
     mathjax: "https://cdn.bootcss.com/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_HTMLorMML"
     css: "sta210-slides.css"
-    logo: img/sta210-sticker-icon.png
-    lib_dir: libs
+    logo: img/sta199-sticker-icon.png
+    lib_dir: libs/font-awesome
     nature:
       highlightStyle: github
       highlightLines: true
       countIncrementalSlides: false
-      slideNumberFormat: "%current%"
+      slideNumberFormat: "%current%" 
+      ratio: "16:9"
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r setup, include=FALSE, echo=FALSE}
 options(htmltools.dir.version = FALSE)
 knitr::opts_chunk$set(
 	fig.align = "center",
-	fig.height = 5.5,
-	fig.width = 10,
+	fig.height =5,
+	fig.width = 8,
 	message = FALSE,
-	warning = FALSE
+	warning = FALSE,
+	echo = FALSE
 )
 ```
 
 class: middle, center
 
-### [Click for PDF of slides](17-multinom-logistic-pt2.pdf)
+## [Click for PDF of slides](22-multinom-logistic-pt2.pdf)
 
-```{r, echo = F}
+```{r,echo=F}
 library(tidyverse)
 library(knitr)
 library(broom)
+library(pROC) 
+library(kableExtra)
+library(patchwork)
 ```
 
 ---
 
-class: middle, center
+## Topics
 
-### Checking assumptions
+- Predictions 
 
----
+- Model selection 
 
-### Assumptions for multinomial logistic regression
-
-We want to check the following assumptions for the multinomial logistic regression model: 
-
-- .vocab[Linearity]: Is there a linear relationship between the log-odds and the predictor variables?
-
-<br>
-
-- .vocab[Randomness]: Was the sample randomly selected? Or can we reasonably treat it as random? 
-
-<br>
-
-- .vocab[Independence]: There is no obvious relationship between observations
+- Checking conditions 
 
 ---
 
-### Checking linearity
 
-For each category of the response, $j$:
+## NHANES Data
 
-- Analyze a plot of the binned residuals vs. predicted probabilities 
+- [National Health and Nutrition Examination Survey](https://www.cdc.gov/nchs/nhanes/index.htm) is conducted by the National Center for Health Statistics (NCHS) 
 
-- Analyze a plot of the binned residuals vs. each continuous predictor variable
+- The goal is to *"assess the health and nutritional status of adults and children in the United States"*
 
-- Look for any patterns in the residuals plots
-
-- For each categorical predictor variables, examine the average residuals for each category of the predictor 
+- This survey includes an interview and a physical examination
 
 ---
 
-### Randomness
-
-Assess randomness based on a description of the data collection
-
-- Was the sample randomly selected?
-- If the sample was not randomly selected, is there reason to believe the observations in the sample differ systematically from the population of interest?
-
----
-
-### Independence
-
-Assess independence based on a description of the data collection
-
-- Is there an obvious relationship between observations? 
-  - This assumption is most often violated when data was collected over time or there is a spatial relationship between observations
-
----
-
-### NHANES Data
+## Health Rating vs. Age & Physical Activity
 
 - **Question**: Can we use a person's age and whether they do regular physical activity to predict their self-reported health rating?
 
-- Variables: 
+- We will analyze the following variables: 
 
   + <font class="vocab">`HealthGen`: </font>Self-reported rating of participant's health in general.  Excellent, Vgood, Good, Fair, or Poor.
   
@@ -105,70 +78,77 @@ Assess independence based on a description of the data collection
     
   + <font class="vocab">`PhysActive`: </font>Participant does moderate to vigorous-intensity sports, fitness or recreational activities
   
-  + .vocab[`Education`]: Categorical variable for highest education level attained 
-  
-```{r echo = FALSE}
- library(NHANES)
+```{r echo = F}
+library(NHANES)
 
 nhanes_adult <- NHANES %>%
-  filter(Age >= 18) %>%
+  filter(Age >= 18, !is.na(HealthGen), !is.na(Age), !is.na(PhysActive)) %>%
   select(HealthGen, Age, PhysActive, Education) %>%
-  filter(!is.na(HealthGen), !is.na(Age), !is.na(PhysActive)) %>%
   mutate(obs_num = 1:n())
 ```
-  
+
 ---
 
-### Model 
+## Model in R
 
-```{r, results = "hide", echo = FALSE}
+
+```{r, echo = F, results = "hide"}
 library(nnet)
 health_m <- multinom(HealthGen ~ Age + PhysActive, 
                      data = nhanes_adult)
 ```
 
-```{r echo = FALSE}
-tidy(health_m, conf.int = TRUE, exponentiate = FALSE) %>%
-  kable(format = "markdown", digits = 3)
-```
-
-
----
-
-### NHANES: Residuals
-
-```{r, results = "hide", echo = FALSE}
-library(nnet)
-health_m <- multinom(HealthGen ~ Age + PhysActive, 
-                     data = nhanes_adult)
-```
-
-```{r}
-#calculate residuals
-residuals <- as_tibble(residuals(health_m)) %>%  #calculate residuals
-  setNames(paste('resid.', names(.), sep = "")) %>% #update column names
-  mutate(obs_num = 1:n()) #add obs number
-```
-
-```{r}
-residuals %>%
-  slice(1:10)
+```{r echo = F}
+tidy(health_m) %>%
+  kable(digits = 3)
 ```
 
 ---
 
-### Make "augmented" dataset
+class: middle, center
 
-```{r}
+## Predictions
+
+---
+
+## Calculating probabilities
+
+For categories $2,\ldots,K$, the probability that the $i^{th}$ observation is in the $j^{th}$ category is
+
+$$\hat{\pi}_{ij} = \frac{\exp\{\hat{\beta}_{0j} + \hat{\beta}_{1j}x_{i1} + \dots + \hat{\beta}_{pj}x_{ip}\}}{1 + \sum\limits_{k=2}^K \exp\{\hat{\beta}_{0k} + \hat{\beta}_{1k}x_{i1} + \dots \hat{\beta}_{pk}x_{ip}\}}$$
+<br> 
+
+For the baseline category, $k=1$, we calculate the probability $\hat{\pi}_{i1}$ as
+$$\hat{\pi}_{i1} = 1- \sum\limits_{k=2}^K \hat{\pi}_{ik}$$
+
+---
+
+## NHANES: Predicted probabilities 
+ 
+ .midi[
+```{r echo = T}
 #calculate predicted probabilities
 pred_probs <- as_tibble(predict(health_m, type = "probs")) %>% 
-  mutate(obs_num = 1:n()) 
+                        mutate(obs_num = 1:n()) 
 ```
+]
 
 ```{r}
-health_m_aug <- inner_join(nhanes_adult, pred_probs) #add probs
-health_m_aug <- inner_join(health_m_aug, residuals) #add resid
+pred_probs %>%
+  slice(101:105)
 ```
+
+---
+
+## Add predictions to original data
+
+.midi[
+```{r echo = T}
+health_m_aug <- inner_join(nhanes_adult, pred_probs, 
+                           by = "obs_num") %>%
+  select(obs_num, everything())
+```
+]
 
 ```{r}
 health_m_aug %>% 
@@ -177,115 +157,56 @@ health_m_aug %>%
 
 ---
 
-### Binned residuals vs. pred. probabilities
+## Actual vs. Predicted Health Rating
 
-```{r echo = F, fig.height = 4.5}
-par(mfrow = c(2,2))
-arm::binnedplot(x = health_m_aug$Excellent, y = health_m_aug$resid.Excellent, 
-                xlab="Predicted P(Excellent)", 
-                ylab="Residuals", 
-                main="Excellent: Residuals vs. Pred. Probabilities", 
-                col.int = FALSE)
+- We can use our model to predict a person's perceived health rating given their age and whether they exercise
 
-arm::binnedplot(x = health_m_aug$Vgood, y = health_m_aug$resid.Vgood, 
-                xlab="Predicted P(Vgood)", 
-                ylab="Residuals", 
-                main="Very Good: Residuals vs. Pred. Probabilities",
-                col.int = FALSE)
+- For each observation, the predicted perceived health rating is the category with the highest predicted probability
 
-arm::binnedplot(x = health_m_aug$Good, y = health_m_aug$resid.Good, 
-                xlab="Predicted P(Good)", 
-                ylab="Residuals", 
-                main="Good: Residuals vs. Pred. Probabilities",
-                col.int = FALSE)
-
-
-arm::binnedplot(x = health_m_aug$Fair, y = health_m_aug$resid.Fair, 
-                xlab="Predicted P(Fair)", 
-                ylab="Residuals", 
-                main="Fair: Residuals vs. Pred. Probabilities",
-                col.int = FALSE)
-
-arm::binnedplot(x = health_m_aug$Poor, y = health_m_aug$resid.Poor, 
-                xlab="Predicted P(Poor)", 
-                ylab="Residuals", 
-                main="Poor: Residuals vs. Pred. Probabilities",
-                col.int = FALSE)
+```{r echo = T}
+health_m_aug <- health_m_aug %>% 
+  mutate(pred_health = predict(health_m, 
+                               type = "class"))
 ```
 
 ---
 
-### Binned residuals vs. `Age`  
+## Actual vs. Predicted Health Rating
 
-```{r echo = F, fig.height = 4.5}
-par(mfrow = c(2,2))
-arm::binnedplot(x = health_m_aug$Age, y = health_m_aug$resid.Excellent, 
-                xlab="Age", 
-                ylab="Residuals", 
-                main="Excellent: Residuals vs. Age", 
-                col.int = FALSE)
-
-arm::binnedplot(x = health_m_aug$Age, y = health_m_aug$resid.Vgood, 
-                xlab="Age", 
-                ylab="Residuals", 
-                main="Very Good: Residuals vs. Age",
-                col.int = FALSE)
-
-
-arm::binnedplot(x = health_m_aug$Age, y = health_m_aug$resid.Good, 
-                xlab="Age", 
-                ylab="Residuals", 
-                main="Good: Residuals vs. Age",
-                col.int = FALSE)
-
-
-arm::binnedplot(x = health_m_aug$Age, y = health_m_aug$resid.Fair, 
-                xlab="Age", 
-                ylab="Residuals", 
-                main="Fair: Residuals vs. Age",
-                col.int = FALSE)
-
-arm::binnedplot(x = health_m_aug$Age, y = health_m_aug$resid.Poor, 
-                xlab="Age", 
-                ylab="Residuals", 
-                main="Poor: Residuals vs. Age",
-                col.int = FALSE)
+.midi[
+```{r echo  = T}
+health_m_aug %>% 
+  count(HealthGen, pred_health, .drop = FALSE) %>%
+  pivot_wider(names_from = pred_health, values_from = n)
 ```
+]
+
+
 
 ---
 
-### Residuals vs. `PhysActive`
+.question[
+Why do you think no observations were predicted to have a rating of "Excellent", "Fair", or "Poor"?
+]
+
+--
 
 ```{r}
-health_m_aug %>%
-  group_by(PhysActive) %>%
-  summarise(mean.Excellent = mean(resid.Excellent), 
-            mean.Vgood = mean(resid.Vgood), 
-            mean.Good = mean(resid.Good),
-            mean.Fair = mean(resid.Fair), 
-            mean.Poor = mean(resid.Poor)) %>%
-  t()
+ggplot(data = nhanes_adult, aes(x = HealthGen)) + 
+  geom_bar() +
+  labs(title = "Self-reported rating of overall health")
 ```
 
----
-
-### Randomness & Independence
-
-- .vocab[Randomness]: 
-  - About the R dataset: *"NHANES can be treated, for educational purposes, as if it were a simple random sample from the American population."* 
-  - What about the actual NHANES data? Type `?NHANES` in the console to read more details about how participants are selected for the actual survey.
-  
-- .vocab[Independence]: The participants are randomly selected within subpopulations, so the independence assumption is satisfied.
 
 ---
 
 class: middle, center
 
-### Model Selection
+## Model selection 
 
 ---
 
-### Comparing Nested Models 
+## Comparing Nested Models 
 
 - Suppose there are two models: 
     - Reduced Model includes predictors $x_1, \ldots, x_q$
@@ -299,7 +220,7 @@ $$\begin{aligned}&H_0: \beta_{q+1} = \dots = \beta_p = 0 \\
 
 ---
 
-### Add `Education` to the model? 
+## Add `Education` to the model? 
 
 - We consider adding the participants' `Education` level to the model.
     - Education takes values `8thGrade`, `9-11thGrade`, `HighSchool`, `SomeCollege`, and `CollegeGrad`
@@ -315,7 +236,7 @@ $$\begin{align}&H_0: \beta_{9-11thGrade} = \beta_{HighSchool} = \beta_{SomeColle
 
 ---
 
-### Add `Education` to the model? 
+## Add `Education` to the model? 
 
 .alert[
 $$\begin{align}&H_0: \beta_{9-11thGrade} = \beta_{HighSchool} = \beta_{SomeCollege} = \beta_{CollegeGrad} = 0\\
@@ -328,16 +249,17 @@ nhanes_adult <- nhanes_adult %>%
 ```
 
 
-```{r results = "hide"}
+```{r echo = T, eval = F}
 model_red <- multinom(HealthGen ~ Age + PhysActive, 
                data = nhanes_adult)
-model_full <- multinom(HealthGen ~ Age + PhysActive + Education, 
+model_full <- multinom(HealthGen ~ Age + PhysActive + 
+                         Education, 
                data = nhanes_adult)
 ```
 
 ---
 
-### Add `Education` to the model? 
+## Add `Education` to the model? 
 
 ```{r results = "hide"}
 model_red <- multinom(HealthGen ~ Age + PhysActive, 
@@ -347,40 +269,155 @@ model_full <- multinom(HealthGen ~ Age + PhysActive + Education,
 ```
 
 
-```{r}
+```{r echo = T}
 anova(model_red, model_full, test = "Chisq") %>%
   kable(format = "markdown")
 ```
 
 --
 
-At least one coefficient associated with `Education` is non-zero. Therefore, `Education` is a statistically significant predictor for `HealthGen`. 
+At least one coefficient associated with `Education` is non-zero. Therefore, we will include `Education` in the model.
 
 ---
 
-### Model with `Education`
+## Model with `Education`
 
+.small[
 ```{r echo = F}
-tidy(model_full, conf.int = T, exponentiate = F) %>%
+tidy(model_full, conf.int = T) %>%
   kable(format = "markdown", digits = 3)
 ```
+]
 
 ---
 
-### Compare NHANES models using AIC
+## Compare NHANES models using AIC
 
-```{r}
-glance(model_red)
-glance(model_full)
+.midi[
+```{r echo = T}
+glance(model_red)$AIC
+glance(model_full)$AIC
 ```
+]
 
-- Use the `step()` function to do model selection with AIC as the selection criteria
+--
 
+Use the `step()` function to do model selection with AIC as the selection criteria
 
 ---
 
 class: middle, center
 
-.question[
-What questions do you have about multinomial logistic regression?
+## Checking conditions
+
+---
+
+## Assumptions for multinomial logistic regression
+
+We want to check the following assumptions for the multinomial logistic regression model: 
+
+1. .vocab[Linearity]: Is there a linear relationship between the log-odds and the predictor variables?
+
+2. .vocab[Randomness]: Was the sample randomly selected? Or can we reasonably treat it as random? 
+
+3. .vocab[Independence]: There is no obvious relationship between observations
+
+---
+
+## Checking linearity 
+
+Similar to logistic regression, we will check linearity by examining empirical logit plots between each level of the predictor and the quantitative predictor variables.
+
+.small[
+```{r echo = T}
+nhanes_adult <- nhanes_adult %>%
+  mutate(Excellent = factor(if_else(HealthGen == "Excellent", "1", "0")), 
+         Vgood = factor(if_else(HealthGen == "Vgood", "1", "0")), 
+         Good = factor(if_else(HealthGen == "Good", "1", "0")), 
+         Fair = factor(if_else(HealthGen == "Fair", "1", "0")), 
+         Poor = factor(if_else(HealthGen == "Poor", "1", "0"))
+  )
+```
 ]
+
+---
+
+## Checking linearity
+
+.small[
+```{r echo = T}
+library(Stat2Data)
+```
+
+```{r echo = T}
+par(mfrow = c(2,1))
+emplogitplot1(Excellent ~ Age, data = nhanes_adult, ngroups = 5, main = "Excellent vs. Age")
+emplogitplot1(Vgood ~ Age, data = nhanes_adult, ngroups = 5, main = "Vgood vs. Age")
+```
+]
+
+---
+
+## Checking linearity 
+
+.small[
+```{r echo = T}
+par(mfrow = c(2,1))
+emplogitplot1(Good ~ Age, data = nhanes_adult, ngroups = 5, main = "Good vs. Age")
+emplogitplot1(Fair ~ Age, data = nhanes_adult, ngroups = 5, main = "Fair vs. Age")
+```
+]
+
+---
+
+## Checking linearity 
+
+.small[
+```{r echo = T}
+emplogitplot1(Poor ~ Age, data = nhanes_adult, ngroups = 5, main = "Poor vs. Age")
+```
+]
+
+--
+
+`r emo::ji("white_check_mark")` The linearity condition is satisfied. There is a linear relationship between the empirical logit and the quantitative predictor variable, Age.
+
+---
+
+## Checking randomness
+
+We can check the randomness condition based on the context of the data and how the observations were collected. 
+
+- Was the sample randomly selected?
+
+- If the sample was not randomly selected, ask whether there is reason to believe the observations in the sample differ systematically from the population of interest. 
+
+--
+
+`r emo::ji("white_check_mark")` The randomness condition is satisfied. We do not have reason to believe that the participants in this study differ systematically from adults in the U.S..
+
+
+---
+
+## Checking independence
+
+
+We can check the independence condition based on the context of the data and how the observations were collected.
+
+Independence is most often violated if the data were collected over time or there is a strong spatial relationship between the observations. 
+
+--
+
+`r emo::ji("white_check_mark")` The independence condition is satisfied. It is reasonable to conclude that the participants' health and behavior characteristics are independent of one another.
+
+
+---
+
+## Recap
+
+
+- Predictions 
+
+- Model selection 
+
+- Checking conditions 
